<resources>
    <string name="app_name">Lab1</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="sid_title">学号：</string>
    <string name="pass_title">密码：</string>
    <string name="sid_hint">请输入学号</string>
    <string name="pass_hint">请输入密码</string>
    <string name="select_student">学生</string>
    <string name="select_staff">教职工</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
</resources>
